--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 API/actor.csv filter=lfs diff=lfs merge=lfs -text
 API/director.csv filter=lfs diff=lfs merge=lfs -text
+peliculas_filtradas.csv filter=lfs diff=lfs merge=lfs -text
