--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 API/actor.csv filter=lfs diff=lfs merge=lfs -text
 API/director.csv filter=lfs diff=lfs merge=lfs -text
 peliculas_filtradas.csv filter=lfs diff=lfs merge=lfs -text
+ETL/actor.csv filter=lfs diff=lfs merge=lfs -text
+ETL/director.csv filter=lfs diff=lfs merge=lfs -text
